# lazychezmoi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: cd.yml  ci.yml
src/: app.rs  chezmoi.rs  main.rs  utils.rs
